Add button text color
