# backend/api-spec.json
@@ -100,6 +100,11 @@
                     "description": "The text label for the call to action button",
                     "example": "Learn more"
                   },
+                  "buttonTextColor": {
+                    "type": "string",
+                    "description": "The color of the text label for the call to action button",
+                    "example": "#FFFFFF"
+                  },
                   "buttonUrl": {
                     "type": "string",
                     "description": "The redirect URL for the call to action button",
@@ -243,6 +248,11 @@
                     "type": "string",
                     "description": "The text label for the call to action button",
                     "example": "Learn more"
+                  },
+                  "buttonTextColor": {
+                    "type": "string",
+                    "description": "The color of the text label for the call to action button",
+                    "example": "#FFFFFF"
                   },
                   "buttonUrl": {
                     "type": "string",
@@ -550,6 +560,11 @@
             "type": "string",
             "description": "The text label for the call to action button",
             "example": "Learn more"
+          },
+          "buttonTextColor": {
+            "type": "string",
+            "description": "The color of the text label for the call to action button",
+            "example": "#FFFFFF"
           },
           "buttonUrl": {
             "type": "string",
